# Frog2D

./: CMakeLists.txt  Frog2D.vcxproj  Frog2D.vcxproj.filters  README.md  ShaderProgram.cpp  ShaderProgram.h  Sprite.cpp  Sprite.h  Transformation.cpp  Transformation.h  fragment.glsl  main.cpp  run.bat  vertex.glsl
Debug/: vc142.idb
Debug/Frog2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Frog2D.lastbuildstate
res/shaders/: vertex.glsl
scripts/: add_class.py  add_shader.py
scripts/data/: line.txt
scripts/templates/: fragment_template.glsl
src/: ShaderProgram.cpp  ShaderProgram.hpp  Sprite.cpp  Sprite.h  Sprite.hpp  Transformation.hpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c  main.cpp
src/core/: EngineManager.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Sprite.hpp  Transformation.cpp  VAO.hpp  VBO.cpp  Window.cpp  Window.hpp
src/core/math/: Transformation.cpp  Transformation.hpp  VAO.cpp  VBO.hpp
x64/Debug/: Frog2D.exe.recipe  Frog2D.ilk  vc142.idb
x64/Debug/Frog2D.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Frog2D.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
